need to test it (test Containers) maybe need to add Kafka
